[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
sqlx = { version = "0.7.1", features = [ "runtime-tokio","mysql","macros","chrono" ] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rand="0.8.5"
calamine = "0.21.2"
dotenv = "0.15.0"