[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
sqlx = { version = "0.7.3", features = [ "runtime-tokio","mysql","macros","chrono" ] }
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rand="0.8.5"
calamine = "0.22.1"
dotenv = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }